--- a/maxonts/package.json
+++ b/maxonts/package.json
@@ -9,9 +9,11 @@
   "license": "MIT",
   "dependencies": {
     "aurelia-animator-css": "^1.0.4",
+    "aurelia-bootstrap-datetimepicker": "^1.3.7",
     "aurelia-bootstrapper": "^2.3.3",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
     "mssql": "^7.2.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.38"
