--- a/maxonts/package.json
+++ b/maxonts/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.1",
     "mssql": "^7.2.1",
     "reflect-metadata": "^0.1.13",
+    "sweetalert2": "^11.1.10",
     "typeorm": "^0.2.38"
   },
   "devDependencies": {
