--- a/maxonts/package.json
+++ b/maxonts/package.json
@@ -13,7 +13,9 @@
     "aurelia-bootstrapper": "^2.3.3",
     "aurelia-store": "^1.7.0",
     "bootstrap": "^5.1.3",
+    "csv-reader": "^1.0.8",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
     "moment": "^2.29.1",
     "mssql": "^7.2.1",
     "reflect-metadata": "^0.1.13",
